fix issue with modal inline styling not showing bg-color or bg-img

--- a/src/sass/components/modal.scss
+++ b/src/sass/components/modal.scss
@@ -19,17 +19,23 @@
   max-width: 500px;
   margin: 0 auto;
   border-radius: 4px;
-  padding: 10px;
+  padding: 0px;
 
     i {
       position: absolute;
-      top: 2%;
-      left: 95%;
+      top: 0%;
+      left: 102%;
+      color: white;
     }
     .header {
       height: 200px;
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
     .content {
+      padding: 10px;
       .selfie {
         display: flex;
         img {
